--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <header>
+        <meta http-equiv="refresh" content="0; url=https://mayukh45.github.io/about_me/public/index.html">
+    </header>
     <body>
         <p>Hey there, This is mayukh!</p>
     </body>
